added yolo example

--- a/reports/Report_patterns_cardinality.ipynb
+++ b/reports/Report_patterns_cardinality.ipynb
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "id": "613ce734",
    "metadata": {},
    "outputs": [
@@ -495,19 +495,131 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2106</th>\n",
+       "      <th>2122</th>\n",
        "      <td>classes_block5_conv4</td>\n",
        "      <td>Ranger_Clipping_Layer</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>44.4</td>\n",
+       "      <td>1004</td>\n",
+       "      <td>30</td>\n",
+       "      <td>73.8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2107</th>\n",
+       "      <th>2124</th>\n",
        "      <td>classes_block5_conv4</td>\n",
        "      <td>Ranger_Clipping_Layer</td>\n",
-       "      <td>4</td>\n",
-       "      <td>7</td>\n",
+       "      <td>1004</td>\n",
+       "      <td>32</td>\n",
+       "      <td>72.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2123</th>\n",
+       "      <td>classes_block5_conv4</td>\n",
+       "      <td>Ranger_Clipping_Layer</td>\n",
+       "      <td>1004</td>\n",
+       "      <td>31</td>\n",
+       "      <td>71.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2118</th>\n",
+       "      <td>classes_block5_conv4</td>\n",
+       "      <td>Ranger_Clipping_Layer</td>\n",
+       "      <td>1004</td>\n",
+       "      <td>26</td>\n",
+       "      <td>70.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2119</th>\n",
+       "      <td>classes_block5_conv4</td>\n",
+       "      <td>Ranger_Clipping_Layer</td>\n",
+       "      <td>1004</td>\n",
+       "      <td>27</td>\n",
+       "      <td>68.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2121</th>\n",
+       "      <td>classes_block5_conv4</td>\n",
+       "      <td>Ranger_Clipping_Layer</td>\n",
+       "      <td>1004</td>\n",
+       "      <td>29</td>\n",
+       "      <td>65.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2117</th>\n",
+       "      <td>classes_block5_conv4</td>\n",
+       "      <td>Ranger_Clipping_Layer</td>\n",
+       "      <td>1004</td>\n",
+       "      <td>25</td>\n",
+       "      <td>65.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2114</th>\n",
+       "      <td>classes_block5_conv4</td>\n",
+       "      <td>Ranger_Clipping_Layer</td>\n",
+       "      <td>1004</td>\n",
+       "      <td>22</td>\n",
+       "      <td>64.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2113</th>\n",
+       "      <td>classes_block5_conv4</td>\n",
+       "      <td>Ranger_Clipping_Layer</td>\n",
+       "      <td>1004</td>\n",
+       "      <td>21</td>\n",
+       "      <td>58.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2116</th>\n",
+       "      <td>classes_block5_conv4</td>\n",
+       "      <td>Ranger_Clipping_Layer</td>\n",
+       "      <td>1004</td>\n",
+       "      <td>24</td>\n",
+       "      <td>55.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2120</th>\n",
+       "      <td>classes_block5_conv4</td>\n",
+       "      <td>Ranger_Clipping_Layer</td>\n",
+       "      <td>1004</td>\n",
+       "      <td>28</td>\n",
+       "      <td>52.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2110</th>\n",
+       "      <td>classes_block5_conv4</td>\n",
+       "      <td>Ranger_Clipping_Layer</td>\n",
+       "      <td>1004</td>\n",
+       "      <td>18</td>\n",
+       "      <td>50.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2115</th>\n",
+       "      <td>classes_block5_conv4</td>\n",
+       "      <td>Ranger_Clipping_Layer</td>\n",
+       "      <td>1004</td>\n",
+       "      <td>23</td>\n",
+       "      <td>34.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2109</th>\n",
+       "      <td>classes_block5_conv4</td>\n",
+       "      <td>Ranger_Clipping_Layer</td>\n",
+       "      <td>1004</td>\n",
+       "      <td>17</td>\n",
+       "      <td>20.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2111</th>\n",
+       "      <td>classes_block5_conv4</td>\n",
+       "      <td>Ranger_Clipping_Layer</td>\n",
+       "      <td>1004</td>\n",
+       "      <td>19</td>\n",
+       "      <td>18.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2112</th>\n",
+       "      <td>classes_block5_conv4</td>\n",
+       "      <td>Ranger_Clipping_Layer</td>\n",
+       "      <td>1004</td>\n",
+       "      <td>20</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -517,16 +629,44 @@
       "text/plain": [
        "                Layer_name                   Mode Pattern Cardinality  \\\n",
        "                                                                        \n",
-       "2106  classes_block5_conv4  Ranger_Clipping_Layer       4           2   \n",
-       "2107  classes_block5_conv4  Ranger_Clipping_Layer       4           7   \n",
+       "2122  classes_block5_conv4  Ranger_Clipping_Layer    1004          30   \n",
+       "2124  classes_block5_conv4  Ranger_Clipping_Layer    1004          32   \n",
+       "2123  classes_block5_conv4  Ranger_Clipping_Layer    1004          31   \n",
+       "2118  classes_block5_conv4  Ranger_Clipping_Layer    1004          26   \n",
+       "2119  classes_block5_conv4  Ranger_Clipping_Layer    1004          27   \n",
+       "2121  classes_block5_conv4  Ranger_Clipping_Layer    1004          29   \n",
+       "2117  classes_block5_conv4  Ranger_Clipping_Layer    1004          25   \n",
+       "2114  classes_block5_conv4  Ranger_Clipping_Layer    1004          22   \n",
+       "2113  classes_block5_conv4  Ranger_Clipping_Layer    1004          21   \n",
+       "2116  classes_block5_conv4  Ranger_Clipping_Layer    1004          24   \n",
+       "2120  classes_block5_conv4  Ranger_Clipping_Layer    1004          28   \n",
+       "2110  classes_block5_conv4  Ranger_Clipping_Layer    1004          18   \n",
+       "2115  classes_block5_conv4  Ranger_Clipping_Layer    1004          23   \n",
+       "2109  classes_block5_conv4  Ranger_Clipping_Layer    1004          17   \n",
+       "2111  classes_block5_conv4  Ranger_Clipping_Layer    1004          19   \n",
+       "2112  classes_block5_conv4  Ranger_Clipping_Layer    1004          20   \n",
        "\n",
        "     Fault_damage_level  \n",
        "                         \n",
-       "2106               44.4  \n",
-       "2107                0.0  "
+       "2122               73.8  \n",
+       "2124               72.2  \n",
+       "2123               71.4  \n",
+       "2118               70.2  \n",
+       "2119               68.2  \n",
+       "2121               65.9  \n",
+       "2117               65.3  \n",
+       "2114               64.5  \n",
+       "2113               58.5  \n",
+       "2116               55.0  \n",
+       "2120               52.0  \n",
+       "2110               50.0  \n",
+       "2115               34.5  \n",
+       "2109               20.0  \n",
+       "2111               18.2  \n",
+       "2112                0.0  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
